[package]
name = "cov_viz"
description = "Generate data used by the CCGR Portal experiment coverage visualizer"
version = "0.2.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/cov_viz_ds", rev = "7197888d485d3b4aaa8de751a4578f0c2912115a" }
# cov_viz_ds = { path = "../cov_viz_ds" }  # For working with a local copy during development
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
postgres_range = "0.11.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
