[package]
name = "cov_viz"
description = "Generate data used by the CCGR Portal experiment coverage visualizer"
version = "0.5.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/cov_viz_ds", rev = "0c58442bbef49acecb7ab2b5d7e2c150adaa61b5" }
# cov_viz_ds = { path = "../cov_viz_ds" }                             # For working with a local copy during development
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
postgres_range = "0.11.0"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
